# Food-Detection-And-Nutrition-Analysis

./: .gitignore  Makefile  README.md  app.py  main.py  main_fe.py  pyproject.toml  requirements.txt
config/: config.yaml  yolo-data.yaml
docs/: mkdocs.yml
docs/docs/: index.md
food_detection_and_nutritional_value/modeling/: LLAMA.py  YOLO-train.py  YOLOPredict.py
notebooks/: Load-llama.ipynb  dataset.yaml  llama-3.py  yolo-predict.ipynb
templates/: index.html
