[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "food_detection_and_nutritional_value"
version = "0.0.1"
description = "food-detection-and-nutritional-value"
authors = [
  { name = "PrajyotKore" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["food_detection_and_nutritional_value"]
force_sort_within_sections = true
